增加一些无用的小文本

--- a/web/index.html
+++ b/web/index.html
@@ -30,5 +30,10 @@
     </form>
     <p id="result"></p>
     <div>Tip:密钥不可为空，不可大于8位</div>
+    <div>
+        <a href="https://github.com/yangyishuo1124/Text_Obfuscator_html" target="_blank"><h5>Github:</h5>https://github.com/yangyishuo1124/Text_Obfuscator_html</a>
+        <div>本软件遵循GNU2.0开源许可</div>
+    </div>
+
 </body>
 </html>
