增加版本号

--- a/web/index.html
+++ b/web/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>加密解密</title>
+    <title>文本混淆V1.0.0</title>
     <script type="text/javascript" src="jquery.min.js"></script>
     <script type="text/javascript" src="/eel.js"></script>
 
@@ -32,7 +32,10 @@
     <div>Tip:密钥不可为空，不可大于8位</div>
     <div>
         <a href="https://github.com/yangyishuo1124/Text_Obfuscator_html" target="_blank"><h5>Github:</h5>https://github.com/yangyishuo1124/Text_Obfuscator_html</a>
-        <div>本软件遵循GNU2.0开源许可</div>
+        <div>
+            本软件遵循GNU2.0开源许可
+            软件版本：1.0.0
+        </div>
     </div>
 
 </body>
