--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh">
 <head onload="brython()">
     <meta charset="UTF-8">
     <title>HelloWorld</title>
@@ -7,8 +7,9 @@
     <script type="text/javascript" src="brython_stdlib.js"></script>
     <script type="text/javascript" src="jquery.min.js"></script>
     <script type="text/python" src="main.py"></script>
+    <link rel="stylesheet" href="main.css">
 </head>
-<body onload="brython()">
+<body onload="brython()" style="background: #ffa8e9">
     <script type="text/python">
         from browser import window
         from main import *
@@ -27,14 +28,15 @@
     </script>
 
 <form name="数据">
-    <label>
-        <textarea name="data" cols="30" rows="10" placeholder="请输入需要加密或解密的文字"></textarea>
-        <div><input name="key" placeholder="请输入密钥"/></div>
-        <button type="button" name="encrypt" onclick="encrypt_fun(数据.key.value,数据.data.value)">加密</button>
-        <button type="button" name="decrypt" onclick="decrypt_fun(数据.key.value,数据.data.value)">解密</button>
-    </label>
+    <div id="main">
+        <textarea id="data" name="data" cols="30" rows="10" placeholder="请输入需要加密或解密的文字"></textarea>
+        <input id="key" name="key" placeholder="请输入密钥"/></div>
+        <div id="button">
+            <button class="button_class" id="encrypt" type="button" name="encrypt" onclick="encrypt_fun(数据.key.value,数据.data.value)">加密</button>
+            <button class="button_class" id="decrypt" type="button" name="decrypt" onclick="decrypt_fun(数据.key.value,数据.data.value)">解密</button>
+        </div>
 </form>
     <p id="result"></p>
-    <div>Tip:密钥不可为空，不可大于8位</div>
+    <div id="tip">Tip:密钥不可为空，不可大于8位</div>
 </body>
 </html>
