--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="zh">
 <head onload="brython()">
     <meta charset="UTF-8">
-    <title>HelloWorld</title>
+    <title>文本混淆器</title>
     <script src="brython.js" type="text/javascript"></script>
     <script src="brython_stdlib.js" type="text/javascript"></script>
     <script src="jquery.min.js" type="text/javascript"></script>
