--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     </a>
                 </span>
             </div>
-            <a href="" id="download" style="display: none"></a>
+            <a href="" id="download" style="display: none " download=""></a>
             <a id="result" style="text-decoration:none;">此处出现结果</a>
             <p class="tip">Tip:密钥不可为空，不可大于8位</p>
             <p class="tip">文件选择目前仅支持txt文本，zip压缩文件，其他类型文件可打包zip</p>
